--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <base href="/deploy-angular-to-github/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.31d6cfe0d16ae931b73c.css"></head>
+<style>html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}body{margin:0;}@media print{*,:after,:before{color:#000!important;text-shadow:none!important;background:0 0!important;box-shadow:none!important;}}*,:after,:before{box-sizing:border-box;}html{font-size:10px;-webkit-tap-highlight-color:rgba(0,0,0,0);}body{font-family:Helvetica Neue,Helvetica,Arial,sans-serif;font-size:14px;line-height:1.42857143;color:#333;background-color:#fff;}</style><link rel="stylesheet" href="styles.bc66ddb28aed4b7c9874.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.bc66ddb28aed4b7c9874.css"></noscript></head>
 <body>
   <app-root></app-root>
 <script src="runtime.b1cf8f970e0e1b8c7c54.js" defer></script><script src="polyfills.281c6d8d8c861df74682.js" defer></script><script src="main.041ce7a21c2e4d40a167.js" defer></script>
